Fix crash in QQuickQuestionListener

The code path is:
 - we create a Question object
 - we show a prompt
 - we start a nested event loop to get this into a syncronous API
 - we return the result to the question object

The lifespan of the question object is not controlled by the listener,
during the nested event loop anything could have happened including
deletion.

BUG: 464624


(cherry picked from commit e9e0e3faa986757ba096dbe599468f395b3461d3)